--- a/index.html
+++ b/index.html
@@ -2174,7 +2174,7 @@ disable them for specific tasks (see <a href="#_task_local_options">Task-local o
 <p>Command line arguments are available as <code>*command-line-args*</code>, just like in
 Clojure. Since version <code>0.9.160</code>, you can use
 <a href="https://github.com/babashka/cli">babashka.cli</a> in tasks via the <a href="#cli:exec">exec</a>
-function.</p>
+function to deal with command line arguments in a concise way.</p>
 </div>
 <div class="paragraph">
 <p>Of course, you are free to parse command line arguments using the built-in
