--- a/index.html
+++ b/index.html
@@ -759,6 +759,7 @@ pre.rouge {
 <li><a href="#tasks">Task runner</a>
 <ul class="sectlevel2">
 <li><a href="#_introduction">Introduction</a></li>
+<li><a href="#_talk">Talk</a></li>
 <li><a href="#_task_local_options">Task-local options</a></li>
 <li><a href="#_discoverability">Discoverability</a></li>
 <li><a href="#_command_line_arguments">Command line arguments</a></li>
@@ -2050,6 +2051,13 @@ use the <code>:requires</code> option:</p>
 <pre class="rouge highlight"><code data-lang="bash"><span class="nv">$ </span>bb clean
 Removing target folder.</code></pre>
 </div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_talk"><a class="link" href="#_talk">Talk</a></h3>
+<div class="paragraph">
+<p>Go <a href="https://www.youtube.com/watch?v=u5ECoR7KT1Y&amp;ab_channel=LondonClojurians">here</a>
+if you would like to watch a talk on babashka tasks.</p>
 </div>
 </div>
 <div class="sect2">
