--- a/index.html
+++ b/index.html
@@ -3400,7 +3400,7 @@ babashka. Documentation is available in the
 <div class="paragraph">
 <p>This is an example script which uses the
 <a href="https://github.com/babashka/pod-babashka-fswatcher">fswatcher</a> pod to
-watch a directory for changes.</p>
+watch a directory for changes:</p>
 </div>
 <div class="listingblock">
 <div class="content">
