--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>Babashka v1.0.165
+<pre>Babashka v1.0.167
 
 Usage: bb [svm-opts] [global-opts] [eval opts] [cmdline args]
 or:    bb [svm-opts] [global-opts] file [cmdline args]
@@ -1517,6 +1517,12 @@ accomplish the same:</p>
 </span><span class="n">$</span><span class="w"> </span><span class="n">BABASHKA_DEV=true</span><span class="w"> </span><span class="n">clojure</span><span class="w"> </span><span class="n">-A</span><span class="no">:main</span><span class="w"> </span><span class="n">--nrepl-server</span><span class="w"> </span><span class="mi">1667</span></code></pre>
 </div>
 </div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_repl_server_port"><a class="link" href="#_repl_server_port">REPL server port</a></h4>
+<div class="paragraph">
+<p>For the socket REPL, pREPL, or nREPL, if a randomized port is needed, 0 can be used anywhere a port argument is accepted.</p>
 </div>
 </div>
 </div>
