--- a/index.html
+++ b/index.html
@@ -799,12 +799,7 @@ pre.rouge {
 <li><a href="#_explicit_requires">Explicit requires</a></li>
 </ul>
 </li>
-<li><a href="#child_processes">Child processes</a>
-<ul class="sectlevel2">
-<li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
-<li><a href="#_babashka_process">babashka.process</a></li>
-</ul>
-</li>
+<li><a href="#child_processes">Child processes</a></li>
 <li><a href="#recipes">Recipes</a>
 <ul class="sectlevel2">
 <li><a href="#_running_tests">Running tests</a></li>
@@ -3542,236 +3537,9 @@ with <code>clojure</code></p>
 <h2 id="child_processes"><a class="link" href="#child_processes">Child processes</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>by Michiel Borkent</p>
-</div>
-<div class="paragraph">
-<p>There are several ways of creating child processes in babashka. Let&#8217;s start with
-the easiest one.</p>
-</div>
-<div class="sect2">
-<h3 id="_clojure_java_shell"><a class="link" href="#_clojure_java_shell">clojure.java.shell</a></h3>
-<div class="paragraph">
-<p>A common way to shell out to another process is via <code>clojure.java.shell</code>:</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="n">user=&gt;</span><span class="w"> </span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">clojure.java.shell</span><span class="w"> </span><span class="no">:refer</span><span class="w"> </span><span class="p">[</span><span class="n">sh</span><span class="p">]])</span><span class="w">
-</span><span class="n">nil</span><span class="w">
-</span><span class="n">user=&gt;</span><span class="w"> </span><span class="p">(</span><span class="nf">sh</span><span class="w"> </span><span class="s">"ls"</span><span class="p">)</span><span class="w">
-</span><span class="p">{</span><span class="no">:exit</span><span class="w"> </span><span class="mi">0</span><span class="n">,</span><span class="w"> </span><span class="no">:out</span><span class="w"> </span><span class="s">"README.md\ndist\ngh-pages\nscript\nsrc\n"</span><span class="n">,</span><span class="w"> </span><span class="no">:err</span><span class="w"> </span><span class="s">""</span><span class="p">}</span></code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>As you can see the result of <code>:out</code> are the lines of text produced by <code>ls</code>. The
-<code>:exit</code> code was <code>0</code> and there was no output on stderr.</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="n">user=&gt;</span><span class="w"> </span><span class="p">(</span><span class="nf">sh</span><span class="w"> </span><span class="s">"ls"</span><span class="w"> </span><span class="s">"foo"</span><span class="p">)</span><span class="w">
-</span><span class="p">{</span><span class="no">:exit</span><span class="w"> </span><span class="mi">1</span><span class="n">,</span><span class="w"> </span><span class="no">:out</span><span class="w"> </span><span class="s">""</span><span class="n">,</span><span class="w"> </span><span class="no">:err</span><span class="w"> </span><span class="s">"ls: foo: No such file or directory\n"</span><span class="p">}</span></code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>If we invoke <code>ls</code> with a non-existing file, there is error output, but not
-output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
-</div>
-<div class="paragraph">
-<p>For more information on <code>clojure.java.shell</code>, read the
-<a href="https://clojure.github.io/clojure/clojure.java.shell-api.html">API documentation</a></p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_babashka_process"><a class="link" href="#_babashka_process">babashka.process</a></h3>
-<div class="paragraph">
-<p>Creating a child process with <code>clojure.java.shell/sh</code> is convenient and
-sufficient in 90% of the scripts you&#8217;re going to write with babashka. For the
-remaining 10% you&#8217;re going to need something slightly more powerful. This is
-where the <code>babashka.process</code> library namespace comes in. The README and source
-code of this library is located <a href="https://github.com/babashka/process">here</a>.</p>
-</div>
-<div class="paragraph">
-<p>What if we wanted to start a Clojure pREPL in our script, send commands to it
-and read the evaluated output in a loop?  Using <code>clojure.java.shell/sh</code> for this
-has the limitation that we can only send input and read output once per process.
-Using <code>babashka.process</code> which leverages the <code>java.lang.ProcessBuilder</code> and
-<code>java.lang.Process</code> classes gives us the extra power we need to overcome this
-limitation.</p>
-</div>
-<div class="paragraph">
-<p>First we show how to use <code>process</code> to start a process that inherits stdout,
-stderr and stdin from the parent process. This is often useful when you want to
-hand over control to another process at the end of a script. The following code
-starts a pREPL process:</p>
-</div>
-<div class="listingblock">
-<div class="title">process/prepl_1.clj</div>
-<div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="o">#</span><span class="n">!/usr/bin/env</span><span class="w"> </span><span class="n">bb</span><span class="w">
-
-</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.process</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">p</span><span class="p">])</span><span class="w">
-
-</span><span class="p">(</span><span class="k">defn</span><span class="w"> </span><span class="n">io-prepl</span><span class="w"> </span><span class="p">[]</span><span class="w">
-  </span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[</span><span class="n">cmd</span><span class="w"> </span><span class="p">[</span><span class="s">"clojure"</span><span class="w"> </span><span class="s">"-M"</span><span class="w">
-             </span><span class="s">"-e"</span><span class="w"> </span><span class="s">"(require '[clojure.core.server :as s])"</span><span class="w">
-             </span><span class="s">"-e"</span><span class="w"> </span><span class="s">"(s/io-prepl)"</span><span class="p">]</span><span class="w">                           <i class="conum" data-value="1"></i><b>(1)</b>
-        </span><span class="n">proc</span><span class="w"> </span><span class="p">(</span><span class="nf">p/process</span><span class="w"> </span><span class="n">cmd</span><span class="w">                                 <i class="conum" data-value="2"></i><b>(2)</b>
-                        </span><span class="p">{</span><span class="no">:inherit</span><span class="w"> </span><span class="n">true</span><span class="w">                      <i class="conum" data-value="3"></i><b>(3)</b>
-                         </span><span class="no">:shutdown</span><span class="w"> </span><span class="n">p/destroy-tree</span><span class="p">})]</span><span class="w">        <i class="conum" data-value="4"></i><b>(4)</b>
-    </span><span class="n">proc</span><span class="p">))</span><span class="w">
-
-</span><span class="o">@</span><span class="p">(</span><span class="nf">io-prepl</span><span class="p">)</span><span class="w">                                                 <i class="conum" data-value="5"></i><b>(5)</b>
-</span></code></pre>
-</div>
-</div>
-<div class="colist arabic">
-<table>
-<tr>
-<td><i class="conum" data-value="1"></i><b>1</b></td>
-<td>The command and its arguments</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="2"></i><b>2</b></td>
-<td>Creating the process</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="3"></i><b>3</b></td>
-<td>This option redirects stdout and stdin from the parent process to the child
-process.</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="4"></i><b>4</b></td>
-<td>This line will destroy the child process and all of it&#8217;s children processes
-before the parent process exits.</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="5"></i><b>5</b></td>
-<td>Dereferencing the process waits until it ends. If
-we would not include this, our script would end immediately.</td>
-</tr>
-</table>
-</div>
-<div class="paragraph">
-<p>When calling the script, we can interact with the pREPL</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>bb src/process/prepl_1.clj
-<span class="o">(</span>+ 1 2 3<span class="o">)</span>
-<span class="o">{</span>:tag :ret, :val <span class="s2">"6"</span>, :ns <span class="s2">"user"</span>, :ms 5, :form <span class="s2">"(+ 1 2 3)"</span><span class="o">}</span></code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>Pressing ctrl-C or typing <code>:repl/quit</code> will make the script terminate.</p>
-</div>
-<div class="paragraph">
-<p>What if we want to parse the output of the prepl and reformat it to our own
-likings?  Instead of sending the output of the child process to stdout we will
-have to get a hold of it. We can grab the output by not using <code>:inherit</code> and
-getting the <code>:out</code> stream of the process. Similarly we will grab the <code>:in</code>
-stream of the process and handle reading ourselves.</p>
-</div>
-<div class="listingblock">
-<div class="title">process/prepl_2.clj</div>
-<div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="o">#</span><span class="n">!/usr/bin/env</span><span class="w"> </span><span class="n">bb</span><span class="w">
-
-</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.process</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">p</span><span class="p">])</span><span class="w">
-
-</span><span class="p">(</span><span class="k">defn</span><span class="w"> </span><span class="n">io-prepl</span><span class="w"> </span><span class="p">[]</span><span class="w">
-  </span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[</span><span class="n">cmd</span><span class="w"> </span><span class="p">[</span><span class="s">"clojure"</span><span class="w"> </span><span class="s">"-M"</span><span class="w">
-             </span><span class="s">"-e"</span><span class="w"> </span><span class="s">"(require '[clojure.core.server :as s])"</span><span class="w">
-             </span><span class="s">"-e"</span><span class="w"> </span><span class="s">"(s/io-prepl)"</span><span class="p">]</span><span class="w">
-        </span><span class="n">proc</span><span class="w"> </span><span class="p">(</span><span class="nf">p/process</span><span class="w"> </span><span class="n">cmd</span><span class="w">
-                        </span><span class="p">{</span><span class="no">:shutdown</span><span class="w"> </span><span class="n">p/destroy-tree</span><span class="p">})]</span><span class="w">
-    </span><span class="n">proc</span><span class="p">))</span><span class="w">
-
-</span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">prepl-process</span><span class="w"> </span><span class="p">(</span><span class="nf">io-prepl</span><span class="p">))</span><span class="w">
-
-</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">clojure.java.io</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">io</span><span class="p">])</span><span class="w">
-
-</span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">input-writer</span><span class="w"> </span><span class="p">(</span><span class="nf">io/writer</span><span class="w"> </span><span class="p">(</span><span class="no">:in</span><span class="w"> </span><span class="n">prepl-process</span><span class="p">)))</span><span class="w">        <i class="conum" data-value="1"></i><b>(1)</b>
-</span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">output-reader</span><span class="w"> </span><span class="p">(</span><span class="nf">java.io.PushbackReader.</span><span class="w">
-                    </span><span class="p">(</span><span class="nf">io/reader</span><span class="w"> </span><span class="p">(</span><span class="no">:out</span><span class="w"> </span><span class="n">prepl-process</span><span class="p">))))</span><span class="w">    <i class="conum" data-value="2"></i><b>(2)</b>
-
-</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">clojure.edn</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">edn</span><span class="p">])</span><span class="w">
-
-</span><span class="p">(</span><span class="nb">loop</span><span class="w"> </span><span class="p">[]</span><span class="w">
-  </span><span class="p">(</span><span class="nb">println</span><span class="w"> </span><span class="s">"Type an expression to evaluate:"</span><span class="p">)</span><span class="w">
-  </span><span class="p">(</span><span class="nb">when-let</span><span class="w"> </span><span class="p">[</span><span class="n">v</span><span class="w"> </span><span class="p">(</span><span class="nb">read-line</span><span class="p">)]</span><span class="w">                               <i class="conum" data-value="3"></i><b>(3)</b>
-    </span><span class="p">(</span><span class="nb">binding</span><span class="w"> </span><span class="p">[</span><span class="n">*out*</span><span class="w"> </span><span class="n">input-writer</span><span class="p">]</span><span class="w">                         <i class="conum" data-value="4"></i><b>(4)</b>
-      </span><span class="p">(</span><span class="nb">println</span><span class="w"> </span><span class="n">v</span><span class="p">))</span><span class="w">
-    </span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[</span><span class="n">next-val</span><span class="w"> </span><span class="p">(</span><span class="nf">edn/read</span><span class="w"> </span><span class="p">{</span><span class="no">:eof</span><span class="w"> </span><span class="no">::EOF</span><span class="p">}</span><span class="w"> </span><span class="n">output-reader</span><span class="p">)]</span><span class="w"> <i class="conum" data-value="5"></i><b>(5)</b>
-      </span><span class="p">(</span><span class="nb">when-not</span><span class="w"> </span><span class="p">(</span><span class="nb">identical?</span><span class="w"> </span><span class="no">::EOF</span><span class="w"> </span><span class="n">next-val</span><span class="p">)</span><span class="w">
-        </span><span class="p">(</span><span class="nb">println</span><span class="w"> </span><span class="p">(</span><span class="no">:form</span><span class="w"> </span><span class="n">next-val</span><span class="p">)</span><span class="w">                         <i class="conum" data-value="6"></i><b>(6)</b>
-                 </span><span class="s">"evaluates to"</span><span class="w">
-                 </span><span class="p">(</span><span class="no">:val</span><span class="w"> </span><span class="n">next-val</span><span class="p">))</span><span class="w">
-        </span><span class="p">(</span><span class="nf">recur</span><span class="p">)))))</span></code></pre>
-</div>
-</div>
-<div class="colist arabic">
-<table>
-<tr>
-<td><i class="conum" data-value="1"></i><b>1</b></td>
-<td>A writer that we will use to send input to the pREPL</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="2"></i><b>2</b></td>
-<td>A reader that reads from the pREPL output. pREPL returns EDN and
-<code>clojure.edn/read</code> needs a <code>PushbackReader</code>.</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="3"></i><b>3</b></td>
-<td>We read user input via <code>clojure.core/read-line</code></td>
-</tr>
-<tr>
-<td><i class="conum" data-value="4"></i><b>4</b></td>
-<td>Here we binding <code>*out*</code> to the input writer so we can use <code>println</code> to write
-to it.</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="5"></i><b>5</b></td>
-<td>Read the next EDN value.</td>
-</tr>
-<tr>
-<td><i class="conum" data-value="6"></i><b>6</b></td>
-<td>Print the output using our custom formatting.</td>
-</tr>
-</table>
-</div>
-<div class="paragraph">
-<p>Here is an example run:</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>bb src/process/prepl_2.clj
-Type an expression to evaluate:
-<span class="o">(</span>+ 1 2 3<span class="o">)</span>
-<span class="o">(</span>+ 1 2 3<span class="o">)</span> evaluates to 6
-:repl/quit</code></pre>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_real_world_examples_2"><a class="link" href="#_real_world_examples_2">Real world examples</a></h4>
-<div class="paragraph">
-<p>Prior to <code>babashka.process</code> people were using raw <code>ProcessBuilder</code> interop. Here are some real world examples. These might get updated to <code>babashka.process</code> in the future.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>The <a href="https://github.com/borkdude/babashka/blob/5608f935cd28c777cf7d16243574558e2203872e/script/bump_version.clj#L9">babashka</a> repo uses <code>ProcessBuilder</code> to invoke git to make a commit after bumping the version.
-It redirects the output from <code>git</code> directly to stdout of the parent process.</p>
-</li>
-<li>
-<p><a href="https://github.com/borkdude/babashka.curl/blob/53b5b9d98f2e594384f628b0deee76b53bea5062/src/babashka/curl.clj#L17">babashka.curl</a> uses <code>ProcessBuilder</code> to interact with the <code>curl</code> executable</p>
-</li>
-<li>
-<p><a href="https://github.com/borkdude/deps.clj/blob/5d51b80176bdcb96927ce5e6aedb25581db0e2e0/deps.clj#L18">deps.clj</a>
-uses <code>ProcessBuilder</code> to interact with <code>java</code>, e.g. to start a Clojure REPL or
-compute a classpath using tools.deps</p>
-</li>
-</ul>
-</div>
-</div>
+<p>For child processes, the babashka <a href="https://github.com/babashka/process">process</a>
+library is recommended. Check out the README which gives a good introduction
+into the library.</p>
 </div>
 </div>
 </div>
