--- a/index.html
+++ b/index.html
@@ -3538,8 +3538,8 @@ with <code>clojure</code></p>
 <div class="sectionbody">
 <div class="paragraph">
 <p>For child processes, the babashka <a href="https://github.com/babashka/process">process</a>
-library is recommended. Check out the README which gives a good introduction
-into the library.</p>
+library is recommended. It is built into babashka. Check out the README which
+gives a good introduction into the library.</p>
 </div>
 </div>
 </div>
