--- a/index.html
+++ b/index.html
@@ -1919,8 +1919,21 @@ added to the classpath:</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:deps</span><span class="w"> </span><span class="p">{</span><span class="n">local/deps</span><span class="w"> </span><span class="p">{</span><span class="no">:local/root</span><span class="w"> </span><span class="s">"."</span><span class="p">}}}</span></code></pre>
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:deps</span><span class="w"> </span><span class="p">{</span><span class="n">your-org/your-project</span><span class="w"> </span><span class="p">{</span><span class="no">:local/root</span><span class="w"> </span><span class="s">"."</span><span class="p">}}}</span></code></pre>
 </div>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Use a unique name to refer to your projec&#8217;s <code>deps.edn</code>, the same name that
+you would otherwise use when referring to your project as a dependency.
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
 <p>If we have a main function in a file called <code>bb/my_project/main.clj</code> like:</p>
