--- a/index.html
+++ b/index.html
@@ -1929,7 +1929,7 @@ added to the classpath:</p>
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-Use a unique name to refer to your projec&#8217;s <code>deps.edn</code>, the same name that
+Use a unique name to refer to your project&#8217;s <code>deps.edn</code>, the same name that
 you would otherwise use when referring to your project as a dependency.
 </td>
 </tr>
